# skillmeld

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  NOTICE  README.md  pyproject.toml  ruff.toml
.claude-plugin/: marketplace.json  plugin.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
skills/skillmeld/: SKILL.md
skills/skillmeld/scripts/: run.sh
src/skillmeld/: __init__.py  __main__.py  cli.py  discovery.py  embed.py  grounding.py  intake.py  models.py  select.py
src/skillmeld/emit/: __init__.py  package.py  provenance.py
src/skillmeld/eval/: __init__.py  evaluate.py  interchange.py  leakage.py  quality.py  route.py  strategy.py  trigger.py
src/skillmeld/hosted/: __init__.py  build_catalog.py
src/skillmeld/merge/: __init__.py  conflicts.py  dedupe.py  frontmatter.py  group.py  parse.py  partition.py  pipeline.py  prune.py  reconcile.py  synthesize.py  verify.py
src/skillmeld/registries/: __init__.py  (+5 more)
tests/: conftest.py  test_catalog_client.py  test_catalog_loader.py  test_cli.py  test_discovery.py  test_emit.py  test_eval.py  test_fetch.py  test_frontmatter.py  test_grounding.py  test_hosted_builder.py  test_intake.py  test_interchange.py  test_merge_cli.py  test_merge_parse.py  test_merge_pipeline.py  test_merge_reconcile_partition.py  test_merge_steps.py  test_security_adapters.py  test_security_license.py  test_security_scan.py  test_security_verdict.py  test_select.py  test_smoke.py
tests/fixtures/: catalog.json
(+7 files in other folders)
