[project]
name = "skillmeld"
version = "0.1.0"
description = "Discover existing community skills and merge the best into one tailored, security-scanned skill set."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [{ name = "Hossein Zargar" }]
keywords = ["claude", "agent-skills", "skills", "compose", "merge"]
dependencies = [
    "bandit>=1.8",
    "cryptography>=43",
    "httpx>=0.27",
    "license-expression>=30",
    "markdown-it-py>=3",
    "pydantic>=2.7",
]

[project.urls]
Homepage = "https://ifylab.dev"
Repository = "https://github.com/ifylab/skillmeld"

[project.scripts]
skillmeld = "skillmeld.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/skillmeld"]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "ty",
    "pytest>=8",
    "pytest-cov>=5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["skillmeld"]
branch = true

[tool.ty.environment]
python-version = "3.12"
